--- a/MRGS/index.html
+++ b/MRGS/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 
-    <title>Multi-robot autonomous 3D reconstruction using Gaussian splatting with Semantic guidance</title>
+    <title>Multi-robot Autonomous 3D Reconstruction using Gaussian Splatting with Semantic Guidance</title>
 
     <!-- Custom styles for this template -->
     <link href="offcanvas.css" rel="stylesheet">
