--- a/AIISRFE/index.html
+++ b/AIISRFE/index.html
@@ -76,11 +76,13 @@
 <s2>Bibtex</s2>
 <hr>
 <div class="bibtexsection">
-    @article{zeng2024autonomous,
-        title={Autonomous Implicit Indoor Scene Reconstruction with Frontier Exploration},
+    @inproceedings{zeng2024autonomous,
+        title={Autonomous implicit indoor scene reconstruction with frontier exploration},
         author={Zeng, Jing and Li, Yanxu and Sun, Jiahao and Ye, Qi and Ran, Yunlong and Chen, Jiming},
-        journal={arXiv preprint arXiv:2404.10218},
-        year={2024}
+        booktitle={2024 IEEE International Conference on Robotics and Automation (ICRA)},
+        pages={18041--18047},
+        year={2024},
+        organization={IEEE}
       }
 </div>
 
