--- a/MRGS/index.html
+++ b/MRGS/index.html
@@ -36,7 +36,7 @@
     <div class="container"></div>
     <!-- <h1 class="nerf_title_v2">TensoRF</h1> -->
 
-    <h1 class="nerf_subheader_v2">Multi-robot autonomous 3D reconstruction using Gaussian splatting with Semantic guidance</h1>
+    <h1 class="nerf_subheader_v2">Multi-robot Autonomous 3D Reconstruction using Gaussian Splatting with Semantic Guidance</h1>
         <!-- <h3 class="nerf_subheader_v2">Arxiv 2022 (Under Review)</h3> -->
     <hr>
     <p class="authors">
