--- a/MRGS/index.html
+++ b/MRGS/index.html
@@ -41,7 +41,7 @@
     <hr>
     <p class="authors">
         <a href="https://small-zeng.github.io/"> Jing Zeng</a>,
-        <a href="https://person.zju.edu.cn/en/yeqi"> Yanxu Li*</a>,
+        <a href="https://person.zju.edu.cn/en/yeqi"> Qi Ye*</a>,
         <a href=""> Tianle Liu</a>,
         <a href="https://person.zju.edu.cn/0623C27"> Yang Xu</a>,
         <a href=""> Jin Li</a>,
