--- a/index.html
+++ b/index.html
@@ -116,23 +116,54 @@
                 </p>
                 <br>
 
-                <h1>Research</h1>
+                <h1>Research interests</h1>
                 <p>
-                    My research interests lie at the the autonomous 3D reconstruction of scenes, including: 
-                    <br>
-                    (1) Online 3D Reconstruction (NeRF / 3DGS).
-                    <br>
-                    (2) View Path Planning (Single / Multiple Robots).
-                    <br>
-                    (3) VLM based Open-Vocabulary 3D Scene Understanding.
+                    My prior research interests lie in the autonomous 3D reconstruction of scenes, including: 
                 </p>
-                <br>
+                <ul>
+                    <li>Online 3D Reconstruction (NeRF / 3DGS)</li>
+                    <li>View Path Planning (Single robot / Multiple robots)</li>
+                    <li>Open-Vocabulary 3D Scene Understanding and Object Completion</li>
+                </ul>
+                
+                <p>
+                     My current research interests focus on embodied intelligence applications empowered by 3D perception, including:
+                </p>
+                <ul>
+                    <li>Vision-Language Navigation (VLN)</li>
+                    <li>Language-driven Object Grasp Detection</li>
+                    <li>Mobile Manipulation</li>
+                </ul>
+
 
                 <div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
 
                 <!-- <p> * denotes equal contribution</p> -->
+
+                  <div class='row vspace-top'>
+                  <div class="col-sm-3">
+                      <img src="../imgs/DCMRAR.png" style="width:100%; margin-right:0px; margin-top:0px;">
+                  </div>
+
+                  <div class="col">
+                      <div class='paper-title'>
+                        Diffusion-Based Completion for Multi-Robot Active Scene Reconstruction Towards IoT Applications
+                      </div>
+                      <div class='paper-desc'>
+                        IEEE Internet of Things Journal (IoTJ 2025)
+                      </div>
+                      <div class='paper-authors'>
+                        <strong>Jing Zeng</strong>†, Yang Xu†, Tianle Liu,  Qi Ye, Jiming Chen*
+                      </div>
+                      <div>
+                          <a href="">[Project page]</a>
+                          <a href="">[Paper]</a>
+                          <a href="">[Code]</a>
+                      </div>
+                  </div>
+                </div>
 
                 <div class='row vspace-top'>
                   <div class="col-sm-3">
