--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                 </p>
                 <ul>
                     <li>Online 3D Reconstruction (NeRF / 3DGS)</li>
-                    <li>View Path Planning (Single robot / Multiple robots)</li>
-                    <li>Open-Vocabulary 3D Scene Understanding and Object Completion</li>
+                    <li>View Path Planning (Single Robot / Multiple Robots)</li>
+                    <li>Open-Vocabulary 3D Scene Understanding and Object Completion (CLIP, Diffusion)</li>
                 </ul>
                 
                 <p>
