--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                      My current research interests focus on embodied intelligence applications empowered by 3D perception, including:
                 </p>
                 <ul>
-                    <li>Vision-Language Navigation (VLN)</li>
-                    <li>Language-driven Object Grasp Detection</li>
+                    <li>Multimodal Vision-Language Navigation (VLN)</li>
+                    <li>Language-Driven Object Grasp Detection</li>
                     <li>Mobile Manipulation</li>
                 </ul>
 
@@ -152,7 +152,7 @@
                         Diffusion-Based Completion for Multi-Robot Active Scene Reconstruction Towards IoT Applications
                       </div>
                       <div class='paper-desc'>
-                        IEEE Internet of Things Journal (IoTJ 2025)
+                        IEEE Internet of Things Journal (IoT-J 2025)
                       </div>
                       <div class='paper-authors'>
                         <strong>Jing Zeng</strong>†, Yang Xu†, Tianle Liu,  Qi Ye, Jiming Chen*
