--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </p>
                 <ul>
                     <li>Multimodal Vision-Language Navigation (VLN)</li>
-                    <li>Language-Driven Object Grasp Detection</li>
+                    <li>Vision-Language-Action based Manipulation (VLA)</li>
                     <li>Mobile Manipulation</li>
                 </ul>
 
