--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                       </div>
                       <div>
                           <a href="">[Project page]</a>
-                          <a href="">[Paper]</a>
+                          <a href="https://ieeexplore.ieee.org/document/11165337">[Paper]</a>
                           <a href="">[Code]</a>
                       </div>
                   </div>
