--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                           IEEE International Conference on Robotics and Automation (ICRA 2023)
                         </div>
                         <div class='paper-authors'>
-                          <strong>Jing Zeng</strong>, Yanxu Li, Yunlong Ran, Shuo Li, Fei Gao, Lincheng Li, Shibo He, Jiming chen, Qi Ye
+                          <strong>Jing Zeng</strong>, Yanxu Li, Yunlong Ran, Shuo Li, Fei Gao, Lincheng Li, Shibo He, Jiming Chen, Qi Ye
                         </div>
                         <div>
                             <a href="https://small-zeng.github.io/EVPP/">[Project page]</a>
